# bouffalo_sdk

./: project.build
bsp/board/bl808dk/: bl808_flash_m0.ld  board.c  board.h
components/: CMakeLists.txt
components/amp/: CMakeLists.txt
components/amp/rpmsg-lite/: CMakeLists.txt
components/amp/rpmsg-lite/include/: rpmsg_compiler.h  rpmsg_default_config.h
components/amp/rpmsg-lite/include/platform/bl808/: rpmsg_platform.h
components/amp/rpmsg-lite/rpmsg_lite/porting/environment/: rpmsg_env_freertos.c
components/amp/rpmsg-lite/rpmsg_lite/porting/platform/bl808/: rpmsg_platform.c
components/os/freertos/portable/GCC/RISC-V/c906/: port.c  portASM.S  portmacro.h
drivers/soc/bl808/std/src/: bl808_ipc.c
examples/freebsd_loader/: Makefile
examples/freebsd_loader/d0/: CMakeLists.txt
examples/freebsd_loader/d0/src/: main.c
examples/freebsd_loader/loader_d0/: CMakeLists.txt  bl808_flash_d0.ld  main.c
examples/freebsd_loader/rpmsg_d0_test/: CMakeLists.txt  Makefile  bl808_flash_d0.ld  proj.conf
examples/freebsd_loader/rpmsg_d0_test/include/: FreeRTOSConfig.h
examples/freebsd_loader/rpmsg_d0_test/src/: main.c
examples/freebsd_loader/rtos_m0/: CMakeLists.txt  FreeRTOSConfig.h  main.c  proj.conf  rpmsg-bus.c
